# patchhub

./: .gitignore  AGENTS.md  README.md  am_patch.repo.toml  biome.json  package-lock.json  package.json  pyproject.toml  pytest.ini  tsconfig.json
.am_patch/: am_patch.repo.toml  tsconfig.typescript_gate.json
amp/: aaa.txt  am_patch.md  am_patch.py  am_patch.toml  am_patch_policy_glossary.md  am_patch_specification.md
amp/am_patch/: cli.py  (+65 more)
badguys/: __init__.py  _util.py  badguys.py  bdg_evaluator.py  bdg_executor.py  bdg_loader.py  bdg_materializer.py  bdg_ops_files.py  bdg_ops_git.py  bdg_ops_ipc.py  bdg_recipe.py  bdg_subst.py  bdg_suite_jail.py  config.toml  discovery.py  ipc_result_reader.py  ipc_stream_recorder.py  run_suite.py  suite_jail_runtime.py
docs/: AUDIOMASON2_PROJECT_CONTRACT.md  aaa.txt  am_patch_instructions.md  badguys_specification.jsonl  instructions_implementation_chats.txt  instructions_project_chats.txt  render_master_spec_txt.py  validate_master_spec_v2.py
governance/: AUDIOMASON2_PROJECT_CONTRACT.md  am_patch_instructions.md  am_patch_specification.md  badguys_specification.jsonl  gov_navigator.py  governance.jsonl  instructions_implementation_chats.txt  instructions_project_chats.txt  patchhub_specification.md  pm_spec.md  pm_spec_validator.py  pm_validator.py  pm_validator_pack_contract.py  pm_validator_runtime_support.py  rc_resolver.py  render_master_spec_txt.py  specification.jsonl  validate_master_spec_v2.py  workflow_effective_context.py
scripts/: aaa.txt  am_patch.md  am_patch.py  am_patch_policy_glossary.md  am_patch_specification.md  check_ascii.py  check_patch_pm.md  check_patch_pm.py  gov_versions.md  gov_versions.py  patchhub.py  patchhub_specification.md  pm_validator.py  pm_validator_pack_contract.py  rc_resolver.py  sync_issues_archive.md  sync_issues_archive.py
tests/: conftest.py  simple_test_config.py  test_am_patch_archive.py  test_am_patch_artifact_toggles.py  test_am_patch_autofix_logging.py  test_am_patch_badguys_gate.py  test_am_patch_cli_help.py  test_am_patch_config_edit_roundtrip.py  test_am_patch_config_schema.py  test_am_patch_docs_gate.py  test_am_patch_dont_touch_gate.py  test_am_patch_engine_gate_step_capture.py  test_am_patch_engine_rollback_wiring.py  test_am_patch_final_summary.py  test_am_patch_finalize_from_cwd_runtime.py  test_am_patch_finalize_workspace_failure_zip.py  test_am_patch_gates_policy_wiring_propagates_biome_controls.py  test_am_patch_gates_wiring_invariant.py  test_am_patch_git_ops.py  test_am_patch_initial_self_backup.py  test_am_patch_ipc_handshake.py  test_am_patch_ipc_shutdown_paths.py  (+163 more)
(+392 files in other folders)
